# cblog

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_ru.md  abstract_data_layer.c  abstract_data_layer_fileno.c  abstract_data_layer_mysql.c  app.c  default_rodata.h  demo.c  fcgi_version.c  main.c  mon_version.c  util.c
demo_data/: 1  2  3  4
demo_data/data/: 10 Simple Men’s Style Upgrades – Quick & Easy  HAHAHA  How To Dress For Your Age (20s, 30s, 40s, 50s+)  Men’s Levi’s Jeans | Ultimate Buying Guide | Fit, Colors, Materials & More
src/: abstract_data_layer.c  abstract_data_layer_fileno.c  abstract_data_layer_mysql.c  app.c  common.c  default_rodata.h  demo.c  fcgi_version.c  fileno_util.c  mon_version.c  util.c
static/minimalist/: index (copy).html  index (copy).ssb  index.html  index.ssb  main.css  reset.css  simplemde-theme-base.css  simplemde-theme-base.min.css
tests/: Makefile  test_layer_fileno.c
tests/fileno_testset/: 1  2  3  4  5  6
tests/fileno_testset/data/: KOLOPHON  abc  def  ghi
tests/hand_tests/: query_test.c  tagtest.c  utfnormalizer.c  validate_email.c
