cmake_minimum_required(VERSION 3.1)
project(cblog C)

set(CMAKE_C_STANDARD 11)
#set(CMAKE_C_COMPILER musl-gcc)
add_executable(cblog src/fcgi_version.c)
add_executable(cblog_mon src/mon_version.c)
add_executable(demo src/demo.c)
include_directories(../ssb/src)
target_include_directories(cblog_mon PUBLIC ../mongoose)
add_executable(test_layer_fileno tests/test_layer_fileno.c)
target_link_libraries(cblog fcgi pthread)
